--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<h1>Data & Insights<br /></h1>
 						<h3><em>by Shruthi</em></h3>
 						<p>I’m a Data Analyst with an M.S. in Data Science. I make data tell its story through Python, SQL, and visualization, delivering insights that drive impact.
-						 <a href="/workspaces/shruthivalaparla.github.io/Files/Valaparla Shruthi - Data Analyst.docx" download="Valaparla Shruthi - Data Analyst.docx">My Resume</a>.</p> 
+						 <a href="Files/Valaparla Shruthi - Data Analyst.docx" download="Valaparla Shruthi - Data Analyst.docx">My Resume</a>.</p> 
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
